<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ServiceTestApplication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="stop">Stop</string>
    <string name="bind">Bind Service</string>
    <string name="unbind">Unbind Service</string>
    <string name="subject">Counting :</string>
    <string name="subject2">Using start/stop Service</string>
    <string name="subject3">Using bind/unBind Service</string>
    <string name="subject4">Using AIDL</string>
    <string name="broadcast">Using Broadcast</string>
    <string name="listener">Using Listener</string>
    <string name="start_counting">Start Counting</string>
    <string name="stop_counting">Stop Counting</string>
    <string name="reset">Reset</string>

</resources>
