<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/subject"
	        android:textSize="30sp" />
	    
	    <TextView
	        android:id="@+id/value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
	        android:textSize="30sp" />

	</LinearLayout>
	
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject2" />
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/increase"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/increase" />
	
	        <Button
	            android:id="@+id/decrease"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/decrease" />
	
	        <Button
	            android:id="@+id/stop"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/stop" />
	    </LinearLayout>
	    
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject3" />
        
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/bind"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/bind" />
	
	        <Button
	            android:id="@+id/unbind"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unbind" />
	
	    </LinearLayout>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/subject4" />
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/increase2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/increase" />
	
	        <Button
	            android:id="@+id/decrease2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/decrease" />
	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/broadcast"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/broadcast" />
	
	        <Button
	            android:id="@+id/listener"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/listener" />
	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/start_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/start_counting"
	            android:textSize="15sp" />
	
	        <Button
	            android:id="@+id/stop_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/stop_counting"
	            android:textSize="15sp" />
	        
	        <Button
	            android:id="@+id/reset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/reset" />
	
	    </LinearLayout>
	</LinearLayout>
	
</LinearLayout>